--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
             </div> <!-- ./clients -->
 
-            <button class="btn btn--orange btn--shadow" type="button">
+            <button class="btn btn--orange btn--shadow" type="button" data-modal="#becomeClientModal">
                 <span>Become a client</span>
             </button>
             <span class="clients-love">we love our clients</span>
@@ -404,7 +404,7 @@
                         </address>
                     </div>
 
-                    <button class="modal__close" type="button"><img src="assets/img/close.svg" alt=""></button>
+                    <button class="modal__close" type="button" data-modal-close><img src="assets/img/close.svg" alt=""></button>
                 </div> <!-- /.modal__content -->
         </div> <!-- /.modal__inner -->
     </div> <!-- /.modal -->
