--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#" data-scroll="#intro">
                     <img class="img" src="assets/img/logo.svg" alt="CenterLogistic">
                 </a>
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <a class="nav__link" href="#" data-scroll="#services">Services</a>
                     <a class="nav__link" href="#" data-scroll="#clients">Clients</a>
                     <a class="nav__link" href="#" data-scroll="#benefits">Benefits</a>
@@ -32,8 +32,11 @@
                     <a class="nav__link" href="#">Contact us</a>
                 </nav>
 
-                <button class="burger" type="button">
-                    <img class="burger__icon" src="assets/img/burger.svg" alt="">
+                <button class="burger" type="button" id="navToggle">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
                 </button>
             </div>
         </div>
