--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
                         <a class="nav__link" href="text.html">Privacy Policy</a>
                         <a class="nav__link" href="text.html">Terms &amp; Conditions</a>
                     </nav>
-                    <button class="burger" type="button">
+                    <button class="burger" type="button" id="navToggle">
                         <img class="burger__icon" src="assets/img/burger.svg" alt="">
                     </button>
                 </div>
