--- a/text.html
+++ b/text.html
@@ -30,7 +30,7 @@
                         <a class="nav__link active" href="text.html">Privacy Policy</a>
                         <a class="nav__link" href="text2.html">Terms &amp; Conditions</a>
                     </nav>
-                    <button class="burger" type="button">
+                    <button class="burger" type="button" id="navToggle">
                         <img class="burger__icon" src="assets/img/burger.svg" alt="">
                     </button>
                 </div>
